@@ -1997,16 +1997,16 @@ Scenes.Halloween.NadirMa = function() { //TODO
 	Text.NL();
 	Text.Add("Before you can think to move, her gaze falls on you and she visibly snaps fully awake, eyes sharpening as she takes in the sight of you.", parse);
 	Text.NL();
-	Text.Add("<i>”Well, what do we have here?”</i> she says, sashaying towards you with a predatory smile.", parse);
+	Text.Add("<i>“Well, what do we have here?”</i> she says, sashaying towards you with a predatory smile.", parse);
 	Text.NL();
 	parse["proverbial"] = player.HasLegs() ? "" : " proverbial";
 	Text.Add("Something in the way she looks at you makes your skin crawl; there’s a hunger there that seems sexual, but with something ever so slightly <i>off</i> about it. You find yourself swallowing a lump that rises in your throat, unable to bring yourself to meet her gaze as you take a[proverbial] step back. Instead, you focus your gaze firmly on her feet, watching her strut towards you.", parse);
 	Text.NL();
-	Text.Add("She chuckles at your reaction. <i>”What’s the problem? Feeling shy?”</i>", parse);
+	Text.Add("She chuckles at your reaction. <i>“What’s the problem? Feeling shy?”</i>", parse);
 	Text.NL();
 	Text.Add("Feeling defensive, you assure her that it’s not so much shyness as uncertainty about where to look. She’s rather...underdressed.", parse);
 	Text.NL();
-	Text.Add("<i>”Oh? So you are the type that gets nervous around naked women? How cute!”</i> She chuckles once more. <i>”Alright then, if you can’t bear to look at my naked body, I think I can do something about it.”</i>", parse);
+	Text.Add("<i>“Oh? So you are the type that gets nervous around naked women? How cute!”</i> She chuckles once more. <i>“Alright then, if you can’t bear to look at my naked body, I think I can do something about it.”</i>", parse);
 	Text.NL();
 	Text.Add("Confused, you look up from the floor you have been so busily inspecting as the naked dobermorph raises a hand with a lazy wave. The urn behind her - from which she recently emerged - visibly rocks on its base, clattering softly against the stone floor. It shudders violently, and then goes still as what looks like a huge, off-white serpent suddenly erupts from its depths!", parse);
 	Text.NL();
@@ -2016,56 +2016,56 @@ Scenes.Halloween.NadirMa = function() { //TODO
 	Text.NL();
 	Text.Add("The overall effect is reminiscent of some sort of bondage gear, serving to emphasize her womanhood rather than to obscure it. About the only concession to modesty is at her hips. There, the bandages intricately twine around themselves, circling her waist and diving down through her buttock cleavage before rising up to join the circle, forming a skimpy pair of panties made purely from bandages.", parse);
 	Text.NL();
-	Text.Add("The dobermorph makes a few poses, examining herself with a smile. <i>”There. Is this better?”</i>", parse);
+	Text.Add("The dobermorph makes a few poses, examining herself with a smile. <i>“There. Is this better?”</i>", parse);
 	Text.NL();
 	Text.Add("Since she’s clearly not hostile, you feel the tension draining out of your body. Looking her in the eye, you dryly note that you’d guess it’s better. A little. You rather thought she was going to put some actual clothes on, not just tie a few ribbons on to show herself off some more.", parse);
 	Text.NL();
-	Text.Add("<i>”Humph, you’re one to talk.”</i> She makes a gesture at you. ", parse);
+	Text.Add("<i>“Humph, you’re one to talk.”</i> She makes a gesture at you. ", parse);
 	if(werewolf) {
-		Text.Add("<i>”You walk around completely in the buff, showing off all your naughty bits to anyone that cares to look,”</i> she adds with a smirk.", parse);
+		Text.Add("<i>“You walk around completely in the buff, showing off all your naughty bits to anyone that cares to look,”</i> she adds with a smirk.", parse);
 		Text.NL();
 		Text.Add("Well, it’s different in your case. People don’t make much clothing that fits someone with your proportions, and you have a certain difficulty in putting them on. You wriggle your fingers, emphasizing the long, sharp claws tipping them, to make it clear what that difficulty might be. Besides, the fur hides everything important on you anyway.", parse);
 		Text.NL();
-		Text.Add("<i>”Not that beautiful pair of jewels you have dangling there,”</i> she points at your crotch, chuckling at her own remark.", parse);
+		Text.Add("<i>“Not that beautiful pair of jewels you have dangling there,”</i> she points at your crotch, chuckling at her own remark.", parse);
 		Text.NL();
 		Text.Add("...Okay, she’s got a point there.", parse);
 		Text.NL();
-		Text.Add("<i>”Make no mistake, cutie. I’m not criticizing you; in fact, I love the whole birthday suit look you got going there. It’s really… <b>interesting</b>.”</i> She grins.", parse);
+		Text.Add("<i>“Make no mistake, cutie. I’m not criticizing you; in fact, I love the whole birthday suit look you got going there. It’s really… <b>interesting</b>.”</i> She grins.", parse);
 	}
 	else {
-		Text.Add("<i>”You walk around with these skimpy clothes that leave <b>very</b> little to the imagination. So what if I’m a bit more… showy? ”</i> she adds with a smirk.", parse);
+		Text.Add("<i>“You walk around with these skimpy clothes that leave <b>very</b> little to the imagination. So what if I’m a bit more… showy? ”</i> she adds with a smirk.", parse);
 		Text.NL();
 		Text.Add("You’re just making do with what you have, though. These are the only clothes you’ve been able to find. She looked like she could have whipped up a lot more coverage out of all those bandages of hers, though.", parse);
 		Text.NL();
-		Text.Add("<i>”Oh? I could have? And who are you to make that claim? You act as if you knew me well...”</i>", parse);
+		Text.Add("<i>“Oh? I could have? And who are you to make that claim? You act as if you knew me well...”</i>", parse);
 		Text.NL();
 		Text.Add("You quickly apologize; you don’t know her well, but she manipulated those bandages with such skill, you were sure she could have dressed herself up with them however she wished, if she felt it necessary.", parse);
 		Text.NL();
-		Text.Add("The dobermorph chuckles. <i>”Apologies accepted. But really, I just wanted to match your style. It’s not fair that I’m the only one getting all the eye candy.”</i> She grins.", parse);
+		Text.Add("The dobermorph chuckles. <i>“Apologies accepted. But really, I just wanted to match your style. It’s not fair that I’m the only one getting all the eye candy.”</i> She grins.", parse);
 	}
 	Text.NL();
-	Text.Add("<i>”I believe we haven’t introduced ourselves yet. I would surely remember a cutie like yourself. What’s your name?”</i>", parse);
+	Text.Add("<i>“I believe we haven’t introduced ourselves yet. I would surely remember a cutie like yourself. What’s your name?”</i>", parse);
 	Text.NL();
 	Text.Add("Seeing no harm in answering, you tell the morph that your name is [playername].", parse);
 	Text.NL();
-	Text.Add("<i>”Pleasure meeting you, [playername]. I am Nadir-Ma.”</i>", parse);
+	Text.Add("<i>“Pleasure meeting you, [playername]. I am Nadir-Ma.”</i>", parse);
 	Text.NL();
 	Text.Add("It’s nice to meet her.", parse);
 	Text.NL();
-	Text.Add("<i>”Now that we’re acquainted, [playername], how about we talk business?”</i>", parse);
+	Text.Add("<i>“Now that we’re acquainted, [playername], how about we talk business?”</i>", parse);
 	Text.NL();
 	Text.Add("Puzzled, you ask her what she means.", parse);
 	Text.NL();
-	Text.Add("<i>”You see, I’ve been stuck inside that jar for the better part of a millennium, and I’m feeling just a little bit pent up.”</i>", parse);
+	Text.Add("<i>“You see, I’ve been stuck inside that jar for the better part of a millennium, and I’m feeling just a little bit pent up.”</i>", parse);
 	Text.NL();
 	Text.Add("Wait, is she going where you think she’s going?", parse);
 	Text.NL();
 	parse["wo"] = player.mfTrue("", "wo");
-	Text.Add("<i>”And now I’m faced with such a delicious looking [wo]man… it’s just too much to bear, trust me. I’m already wet!”</i> she shamelessly declares touching the wet bandages covering her honeypot.", parse);
+	Text.Add("<i>“And now I’m faced with such a delicious looking [wo]man… it’s just too much to bear, trust me. I’m already wet!”</i> she shamelessly declares touching the wet bandages covering her honeypot.", parse);
 	Text.NL();
 	Text.Add("...Yeah, you suspected that’s where she was going.", parse);
 	Text.NL();
-	Text.Add("<i>”How about you be a gentle[wo]man and help a girl relieve some tension?”</i>", parse);
+	Text.Add("<i>“How about you be a gentle[wo]man and help a girl relieve some tension?”</i>", parse);
 	Text.NL();
 	Text.Add("Well, it’s not like you can’t understand where she’s coming from. That’s a <b>long</b> time to go without getting any sex. Wouldn’t it be nice to help her out, like she asked you to? On the other hand... she’s clearly something supernatural. Getting that close to her mightn’t be a good idea...", parse);
 	Text.Flush();
