@@ -13,6 +13,8 @@ Version 0.4n
  - Breasts. Written by The Obserever
  - Pussy. Written by The Obserever
  - Ass. Written by The Obserever
+* Some more scenes for cats
+ - Win, get serviced. Requires cock. Written by LukaDoc
 
 --------------------------------------------
              PREVIOUS VERSIONS
